--- a/index.html
+++ b/index.html
@@ -13,6 +13,38 @@
         --muted: #94a3b8;
         --accent: #0ea5a6;
       }
+      html[data-theme='light'] {
+        --bg: #f8fafc;
+        --panel: #f1f5f9;
+        --text: #1e293b;
+        --muted: #64748b;
+        --accent: #0ea5a6;
+        --input-bg: #fff;
+        --input-border: #cbd5e1;
+      }
+      html[data-theme='fun'] {
+        --bg: #f6e6ff;
+        --panel: #f3d9fa;
+        --text: #3a255a;
+        --muted: #a78bfa;
+        --accent: #c084fc;
+        --accent2: #60a5fa;
+        --accent3: #f472b6;
+        --input-bg: #f8f0fc;
+        --input-border: #c084fc;
+      }
+      html[data-theme='fun'] a {
+        color: var(--accent2);
+        text-decoration: underline;
+      }
+      html[data-theme='fun'] .pill {
+        background: var(--accent2);
+        color: #fff;
+        border: 1px solid var(--accent3);
+      }
+      html[data-theme='fun'] .muted {
+        color: var(--accent3);
+      }
       html,
       body,
       #root {
@@ -48,8 +80,8 @@
       }
       input,
       select {
-        background: #0b1220;
-        border: 1px solid #263043;
+        background: var(--input-bg, #0b1220);
+        border: 1px solid var(--input-border, #263043);
         color: var(--text);
         padding: 8px 10px;
         border-radius: 8px;
@@ -62,7 +94,7 @@
       }
       button {
         background: var(--accent);
-        color: #042f2e;
+        color: #fff;
         border: none;
         border-radius: 8px;
         padding: 10px 14px;
@@ -72,7 +104,7 @@
       button.ghost {
         background: transparent;
         color: var(--muted);
-        border: 1px solid #263043;
+        border: 1px solid var(--input-border, #263043);
       }
       .row {
         display: flex;
@@ -96,11 +128,34 @@
         padding: 4px 8px;
         color: var(--muted);
       }
+      html[data-theme='light'] .pill {
+        background: #e0e7ef;
+        border: 1px solid #cbd5e1;
+        color: var(--accent);
+      }
       .danger {
         color: #fecaca;
       }
       .success {
         color: #bbf7d0;
+      }
+      html[data-theme='light'] .danger {
+        color: #dc2626;
+        font-weight: bold;
+      }
+      html[data-theme='light'] .success {
+        color: #059669;
+        font-weight: bold;
+      }
+      html[data-theme='fun'] .danger {
+        color: #d72660;
+        font-weight: bold;
+        text-shadow: 0 1px 2px #fff6;
+      }
+      html[data-theme='fun'] .success {
+        color: #1cb698;
+        font-weight: bold;
+        text-shadow: 0 1px 2px #fff6;
       }
       a {
         color: #7dd3fc;
