--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Pantry Tracker</title>
     <meta name="theme-color" content="#0f766e" />
     <link rel="manifest" href="/manifest.webmanifest" />
+    <link rel="icon" href="/icons/icon128.png" type="image/png" />
   </head>
   <body>
     <div id="root"></div>
